src/objects/Call_Library__c.object
<CustomObject>
    <fields>
        <fullName>Behavior__c</fullName>
        <label>Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Complete Information</fullName>
                </value>
                <value>
                    <fullName>Great Pitch</fullName>
                </value>
                <value>
                    <fullName>Mutual Understanding</fullName>
                </value>
                <value>
                    <fullName>OHLC</fullName>
                </value>
                <value>
                    <fullName>Reassuring Statement</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Questions/Discovery</fullName>
                </value>
                <value>
                    <fullName>Tone</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C-Review</label>
        <referenceTo>Compliance_Review__c</referenceTo>
        <relationshipLabel>Call Library&apos;s</relationshipLabel>
        <relationshipName>Call_Library_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <label>Call ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Call__c</fullName>
        <label>Date of Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <label>Initiative</label>
        <referenceTo>Initiative__c</referenceTo>
        <relationshipLabel>Call Library&apos;s</relationshipLabel>
        <relationshipName>Call_Library_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BIZ</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LZ_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LZ Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Library_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LZ_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LZ Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Library_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EP Bundle</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>BAP/LAP/Forms</fullName>
                </value>
                <value>
                    <fullName>POA</fullName>
                </value>
                <value>
                    <fullName>EIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Library_s2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Call Library</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LOB__c</columns>
        <columns>Product__c</columns>
        <columns>Behavior__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Call Library Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Library&apos;s</pluralLabel>
    <recordTypes>
        <fullName>Customer_Care</fullName>
        <active>true</active>
        <label>Customer Care</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales</fullName>
        <active>true</active>
        <label>Sales</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Creation_of_New_Call_Library</fullName>
        <active>false</active>
        <description>Prevent Creation of New Call Library when Count on Initiatives is 101 or greater.</description>
        <errorConditionFormula>Initiative__r.Count_of_Call_Library__c  &gt;= 101</errorConditionFormula>
        <errorMessage>Count of Initiatives has been 101 or greater...</errorMessage>
    </validationRules>
</CustomObject>